# veber

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  build_win.yml  rust.yml
src/: main.rs  transactions.rs  users.ums
src/data/: 4pq5AdjwDqpTC52KKkSuGXuUrmxVIQxyN3GL5GvAKUw=.db  J5bwv4mZAPG6Td+EyC587eRwNM2A69SzuqR9ZkxuI0I=.db  SnVzdF9hX01hbmdv.db  YWRtaW4.db  c29hemljaw.db  xeQrxdmqwJn95OpvwRVrLS1Y+urmrQq1GEau4ruuk+w=.db
src/db/: 4pq5AdjwDqpTC52KKkSuGXuUrmxVIQxyN3GL5GvAKUw=.db  J5bwv4mZAPG6Td+EyC587eRwNM2A69SzuqR9ZkxuI0I=.db
src/lib/: hash.rs  hashing.rs
veber_ux/: package-lock.json  package.json
veber_ux/src/: App.jsx  Home.css  Home.jsx  LogIn.css  LogIn.jsx  persistent.jsx
