[package]
name = "untitled_economy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.10.6"
hex-literal = "0.3.4"
threadpool = "1.8.1"
magic-crypt = "3.1.12"
try-catch = "0.2.2"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[profile.release]
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3